@@ -4,6 +4,7 @@ master
 - Mayhem
   Increase Sauce linking possibilites:
     Thumbnails, full images, MD5 hashes.
+  Unread Favicon is now optional, independent of Unread Count.
 
 2.25.5
 - Mayhem
